[tool.poetry]
name = "repl_nix_cloudlink"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
websocket = "^0.2.1"
websockets = "^11.0.2"
Flask = "^2.3.2"
pysondb = "1.6.7"
ujson = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
